# free-trek-hs

./: LICENSE  README.md  free-trek-hs.cabal
app/: Main.hs
src/FreeTrek/: Algebras.hs  Domain.hs  Inject.hs  Interpreters.hs  Pairing.hs  Planning.hs
test/: PlanningSpec.hs
