name:                free-trek-hs
version:             0.1.0.0
synopsis:            Free monad study
description:         A study of Free monads with a Star Trek theme
homepage:            https://github.com/seance/free-trek-hs#readme
license:             BSD3
license-file:        LICENSE
author:              github/seance
maintainer:          github/seance
copyright:           2017 github/seance
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FreeTrek.Domain,
                       FreeTrek.Inject,
                       FreeTrek.Pairing,
                       FreeTrek.Algebras,
                       FreeTrek.Interpreters,
                       FreeTrek.Planning
  build-depends:       base >= 4.7 && < 5,
                       free >= 4.12.4 && < 4.13,
                       mtl >= 2.2.1 && < 2.3,
                       deriving-compat >= 0.3.6 && < 0.4,
                       extra >= 1.5.3 && < 1.6

  default-language:    Haskell2010

executable free-trek-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       free-trek-hs,
                       free >= 4.12.4 && < 4.13,
                       mtl >= 2.2.1 && < 2.3
  default-language:    Haskell2010

test-suite free-trek-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PlanningSpec.hs
  build-depends:       base,
                       free-trek-hs,
                       tasty >= 0.11.3 && < 0.12,
                       tasty-hunit >= 0.9.2 && < 0.10,
                       free >= 4.12.4 && < 4.13,
                       mtl >= 2.2.1 && < 2.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/seance/free-trek-hs
